# guidance_ws

./: .gitignore  LICENSE  README.md
src/Guidance-SDK-ROS-master/: CMakeLists.txt
src/Guidance-SDK-ROS-master/src/: GuidanceNode.cpp  GuidanceNode.cpp~  GuidanceNodeCalibration.cpp  GuidanceNode_1.cpp  GuidanceNode_without.cpp
src/airsim_environment/: CMakeLists.txt  package.xml
src/airsim_environment/juggler/: plot.xml
src/airsim_environment/launch/: 1.launch  2.launch  3.launch  (+8 more)
src/airsim_keyboard_controller/: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
src/airsim_keyboard_controller/launch/: keyboard_controller.launch
src/airsim_keyboard_controller/src/: drone_controller.py  keyboard_controller.py
src/airsim_teleop/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
src/rfly_launch/: CMakeLists.txt  package.xml
src/rfly_navigation/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main.cpp~  package.xml
src/rfly_navigation2/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main.cpp~  main2.cpp  main_guidance.cpp  package.xml  package.xml~
src/rfly_orb/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main.cpp~
src/rfly_orb_pyramids/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main.cpp~  main2.cpp~  main3.cpp  main_with_mean.cpp  main_with_mean.cpp~  main_withmean.cpp  package.xml  package.xml~
src/rfly_phase/: CMakeLists.txt  CMakeLists.txt~  main (another copy).cpp  main (copy).cpp  main.cpp  main.cpp~  package.xml  package.xml~
src/rfly_pyramids/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main.cpp~  main3.cpp  package.xml~
(+45 files in other folders)
