<package>
	<name>airsim_keyboard_controller</name>
	<version>1.0.0</version>
	<description>
		Controllers developed for the "Up and flying with the AirSim and ROS" tutorial series
	</description>
	<maintainer email="mail@mail.com">Mike Hamer</maintainer>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>cmake_modules</build_depend>
	<run_depend>joy</run_depend>
	<run_depend>cmake_modules</run_depend>

	<license>BSD</license>
	<url>http://github.com/mikehamer/ardrone_tutorials</url>
</package>


